change-text content

--- a/register.html
+++ b/register.html
@@ -33,7 +33,7 @@
         
         <div class="register-row">
             <label for="message">Nội dung thư:</label>
-        <textarea id="message" name="message" rows="4" required>Chúc mừng Ngày Phụ nữ Việt Nam! Chúc bạn luôn vui vẻ, hạnh phúc và thành công!"</textarea>
+        <textarea id="message" name="message" rows="4" required>🌹 Chúc những người phụ nữ Việt Nam luôn xinh đẹp, luôn hạnh phúc và gặp nhiều may mắn trong cuộc sống ☘️</textarea>
         </div>
         
         <div>
