--- a/register.html
+++ b/register.html
@@ -29,6 +29,7 @@
                 <option value="https://storage.googleapis.com/webai-54992.appspot.com/con-no-me.mp3">Con nợ mẹ</option>
                 <option value="https://storage.googleapis.com/webai-54992.appspot.com/chua-bao-gio-me.mp3">Chưa bao giờ mẹ kể</option>
                 <option value="https://storage.googleapis.com/webai-54992.appspot.com/falling-you.mp3">Falling You</option>
+                <option value="https://storage.googleapis.com/webai-54992.appspot.com/oi-mat-riu.mp3">Ôi Mất Rìu</option>
             </select>
         </div>
         
