--- a/register.html
+++ b/register.html
@@ -30,6 +30,9 @@
                 <option value="https://storage.googleapis.com/webai-54992.appspot.com/chua-bao-gio-me.mp3">Chưa bao giờ mẹ kể</option>
                 <option value="https://storage.googleapis.com/webai-54992.appspot.com/falling-you.mp3">Falling You</option>
                 <option value="https://storage.googleapis.com/webai-54992.appspot.com/oi-mat-riu.mp3">Ôi Mất Rìu</option>
+                <option value="https://storage.googleapis.com/webai-54992.appspot.com/say-yes-vi.mp3">Say Yes VietNamese</option>
+                <option value="https://storage.googleapis.com/webai-54992.appspot.com/iu-la-day.mp3">Iu là đây</option>
+                <option value="https://storage.googleapis.com/webai-54992.appspot.com/chi-can-co-nhau.mp3">CHỈ CẦN CÓ NHAU</option>
             </select>
         </div>
         
