--- a/register.html
+++ b/register.html
@@ -33,6 +33,7 @@
                 <option value="https://storage.googleapis.com/webai-54992.appspot.com/say-yes-vi.mp3">Say Yes VietNamese</option>
                 <option value="https://storage.googleapis.com/webai-54992.appspot.com/iu-la-day.mp3">Iu là đây</option>
                 <option value="https://storage.googleapis.com/webai-54992.appspot.com/chi-can-co-nhau.mp3">CHỈ CẦN CÓ NHAU</option>
+                <option value="https://storage.googleapis.com/webai-54992.appspot.com/anh-nang-cua-anh.mp3">Ánh nắng của anh</option>
             </select>
         </div>
         
