change logic minor , help

--- a/register.html
+++ b/register.html
@@ -35,6 +35,10 @@
                 <option value="https://storage.googleapis.com/webai-54992.appspot.com/oi-mat-riu.mp3">Ôi Mất Rìu</option>
                 <option value="https://storage.googleapis.com/webai-54992.appspot.com/say-yes-vi.mp3">Say Yes VietNamese</option>
             </select>
+            <!-- Thêm ô input và nút để nhập tên bài hát mới -->
+            <div style="margin-top: 10px;">
+                <span style="font-style: italic;">" Yêu cầu bài hát bạn muốn hoặc cần hỗ trợ hãy nhắn tin vào telegram AD : https://t.me/trong_toan "</span>
+            </div>
         </div>
         
         <div class="register-row">
@@ -43,7 +47,7 @@
         </div>
         
         <div>
-            <button type="submit" class="submit-button">Gửi</button>
+            <button type="submit" id="submitButton" class="submit-button">Gửi</button>
         </div>
     </form>
 
