--- a/register.html
+++ b/register.html
@@ -25,6 +25,7 @@
                 <option value="https://storage.googleapis.com/webai-54992.appspot.com/uoc-mo-cua-me.mp3">Ước mơ của mẹ</option>
                 <option value="https://storage.googleapis.com/webai-54992.appspot.com/anh-nang-cua-anh.mp3">Ánh nắng của anh</option>
                 <option value="https://storage.googleapis.com/webai-54992.appspot.com/chua-bao-gio-me.mp3">Chưa bao giờ mẹ kể</option>
+                <option value="https://storage.googleapis.com/webai-54992.appspot.com/co-hen-voi-thanh-xuan.mp3">có hẹn với thanh xuân</option>
                 <option value="https://storage.googleapis.com/webai-54992.appspot.com/chi-can-co-nhau.mp3">CHỈ CẦN CÓ NHAU</option>
                 <option value="https://storage.googleapis.com/webai-54992.appspot.com/con-no-me.mp3">Con nợ mẹ</option>
                 <option value="https://storage.googleapis.com/webai-54992.appspot.com/falling-you.mp3">Falling You</option>
@@ -32,8 +33,10 @@
                 <option value="https://storage.googleapis.com/webai-54992.appspot.com/gap-me-trong-mo.mp3">Gặp mẹ trong mơ</option>
                 <option value="https://storage.googleapis.com/webai-54992.appspot.com/iu-la-day.mp3">Iu là đây</option>
                 <option value="https://storage.googleapis.com/webai-54992.appspot.com/nhat-ky-cua-me.mp3">Nhật ký của mẹ</option>
+                <option value="https://storage.googleapis.com/webai-54992.appspot.com/nu-cuoi-18-20.mp3">nụ cười 18 20</option>
                 <option value="https://storage.googleapis.com/webai-54992.appspot.com/oi-mat-riu.mp3">Ôi Mất Rìu</option>
                 <option value="https://storage.googleapis.com/webai-54992.appspot.com/say-yes-vi.mp3">Say Yes VietNamese</option>
+                <option value="https://storage.googleapis.com/webai-54992.appspot.com/vo-tuyet-voi-nhat.mp3">Vợ Tuyệt Vời Nhất</option>
             </select>
             <!-- Thêm ô input và nút để nhập tên bài hát mới -->
             <div style="margin-top: 10px;">
