--- a/register.html
+++ b/register.html
@@ -31,6 +31,7 @@
                 <option value="https://storage.googleapis.com/webai-54992.appspot.com/falling-you.mp3">Falling You</option>
                 <option value="https://storage.googleapis.com/webai-54992.appspot.com/ganh-me.mp3">Gánh mẹ</option>
                 <option value="https://storage.googleapis.com/webai-54992.appspot.com/gap-me-trong-mo.mp3">Gặp mẹ trong mơ</option>
+                <option value="https://storage.googleapis.com/webai-54992.appspot.com/hb-always-14.mp3">Happy Birthday to You (Always 14)</option>
                 <option value="https://storage.googleapis.com/webai-54992.appspot.com/iu-la-day.mp3">Iu là đây</option>
                 <option value="https://storage.googleapis.com/webai-54992.appspot.com/nhat-ky-cua-me.mp3">Nhật ký của mẹ</option>
                 <option value="https://storage.googleapis.com/webai-54992.appspot.com/nu-cuoi-18-20.mp3">nụ cười 18 20</option>
