--- a/register.html
+++ b/register.html
@@ -22,6 +22,7 @@
         <div>
             <label for="musicLink">Chọn bài hát:</label>
             <select id="musicLink">
+                <option value="https://storage.googleapis.com/webai-54992.appspot.com/hb-always-14.mp3">Happy Birthday to You (Always 14)</option>
                 <option value="https://storage.googleapis.com/webai-54992.appspot.com/uoc-mo-cua-me.mp3">Ước mơ của mẹ</option>
                 <option value="https://storage.googleapis.com/webai-54992.appspot.com/anh-nang-cua-anh.mp3">Ánh nắng của anh</option>
                 <option value="https://storage.googleapis.com/webai-54992.appspot.com/chua-bao-gio-me.mp3">Chưa bao giờ mẹ kể</option>
@@ -31,7 +32,6 @@
                 <option value="https://storage.googleapis.com/webai-54992.appspot.com/falling-you.mp3">Falling You</option>
                 <option value="https://storage.googleapis.com/webai-54992.appspot.com/ganh-me.mp3">Gánh mẹ</option>
                 <option value="https://storage.googleapis.com/webai-54992.appspot.com/gap-me-trong-mo.mp3">Gặp mẹ trong mơ</option>
-                <option value="https://storage.googleapis.com/webai-54992.appspot.com/hb-always-14.mp3">Happy Birthday to You (Always 14)</option>
                 <option value="https://storage.googleapis.com/webai-54992.appspot.com/iu-la-day.mp3">Iu là đây</option>
                 <option value="https://storage.googleapis.com/webai-54992.appspot.com/nhat-ky-cua-me.mp3">Nhật ký của mẹ</option>
                 <option value="https://storage.googleapis.com/webai-54992.appspot.com/nu-cuoi-18-20.mp3">nụ cười 18 20</option>
@@ -47,7 +47,7 @@
         
         <div class="register-row">
             <label for="message">Nội dung thư:</label>
-        <textarea id="message" name="message" rows="4" required>🌹 Chúc những người phụ nữ Việt Nam luôn xinh đẹp, luôn hạnh phúc và gặp nhiều may mắn trong cuộc sống ☘️</textarea>
+        <textarea id="message" name="message" rows="4" required>🌹💐 Chúc mừng sinh nhật bạn ☘️</textarea>
         </div>
         
         <div>
