--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Happy Birth Day To You</title>
+    <title>Thiep Chuc Mung</title>
     <link rel="icon" href="hpbd_icon.ico" type="image/x-icon">
     <link
             rel="stylesheet"
