--- a/register.html
+++ b/register.html
@@ -11,7 +11,7 @@
     <form id="registerForm">
         <div class="register-row">
             <label for="tieuDe">Nhập tiêu đề:</label>
-            <input type="tieuDe" id="tieuDe" name="tieuDe" value="Happy Birth Day To You 🕯️" required>
+            <input type="tieuDe" id="tieuDe" name="tieuDe" value="Happy Birthday To You 🕯️" required>
         </div>
         
         <div>
