--- a/register.html
+++ b/register.html
@@ -33,6 +33,7 @@
                 <option value="https://storage.googleapis.com/webai-54992.appspot.com/ganh-me.mp3">Gánh mẹ</option>
                 <option value="https://storage.googleapis.com/webai-54992.appspot.com/gap-me-trong-mo.mp3">Gặp mẹ trong mơ</option>
                 <option value="https://storage.googleapis.com/webai-54992.appspot.com/iu-la-day.mp3">Iu là đây</option>
+                <option value="https://storage.googleapis.com/webai-54992.appspot.com/cmsn-pdt.mp3">Khúc hát chúc mừng sinh nhật</option>
                 <option value="https://storage.googleapis.com/webai-54992.appspot.com/nhat-ky-cua-me.mp3">Nhật ký của mẹ</option>
                 <option value="https://storage.googleapis.com/webai-54992.appspot.com/nu-cuoi-18-20.mp3">nụ cười 18 20</option>
                 <option value="https://storage.googleapis.com/webai-54992.appspot.com/oi-mat-riu.mp3">Ôi Mất Rìu</option>
